fixed margin and padding on main and img tags to look good with footer on small window heights. Fiiiiiiiinally.

--- a/css/style.css
+++ b/css/style.css
@@ -55,10 +55,11 @@ nav {
 main {
   margin: 35px auto;
   width: 850px;
+  padding-bottom: 27px; /* offset height of footer when positioned fixed. 27px + the 35px margin on the images*/
 }
 
 img {
-  margin: 40px 8px 0;
+  margin: 40px 8px;
 }
 
 footer {
